textual: fix three typos in message strings and improve consistency
Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/sys-utils/fstrim.8
+++ b/sys-utils/fstrim.8
@@ -9,7 +9,7 @@ fstrim \- discard unused blocks on a mounted filesystem
 .RB [ \-l
 .IR length ]
 .RB [ \-m
-.IR minimum-extent ]
+.IR minimum-free-extent ]
 .RB [ \-v ]
 .I mountpoint
 
