--- a/partx/partx.8
+++ b/partx/partx.8
@@ -3,10 +3,10 @@
 .\" Copyright 2007 Red Hat, Inc.
 .\" Copyright 2010 Davidlohr Bueso <dave@gnu.org>
 .\" May be distributed under the GNU General Public License
-.TH PARTX 8 "28 Oct 2010"
+.TH PARTX 8 "1 Feb 2011"
 .SH NAME
 partx \-
-tell the linux kernel about presence and numbering of on-disk partitions.
+tell the Linux kernel about the presence and numbering of on-disk partitions
 .SH SYNOPSIS
 .B partx
 .RB [ \-a | \-d | \-s ]
@@ -25,88 +25,89 @@ tell the linux kernel about presence and numbering of on-disk partitions.
 .RI [ disk ]
 
 .SH DESCRIPTION
-Given a device or disk-image, try to parse the partition table, and list the
-contents. Optionally add or remove partitions.
+Given a device or disk-image, \fBpartx\fP tries to parse the partition table and
+list its contents.  It optionally adds or removes partitions.
 
 The
 .I disk
 argument is optional when a 
 .I partition 
-argument is provided. It's possible to force scanning on partition (for example
-to list nested subpartitions), then the string "-" has to be used, for example:
+argument is provided.  To force scanning a partition as if it were a whole disk
+(for example to list nested subpartitions), use the argument "-".  For example:
 
 .RS
 .br
 .B partx \-\-show \- /dev/sda3
 .RE
 
-This will use sda3 as a whole-disk rather than a partition.
+This will see sda3 as a whole-disk rather than a partition.
 
-.B This is not an fdisk
-\- adding and removing partitions
-is not a change of the disk, but just telling the kernel
-about presence and numbering of on-disk partitions.
+.B This is not an fdisk program
+\-\- adding and removing partitions
+does not change the disk, it just tells the kernel
+about the presence and numbering of on-disk partitions.
 
 .SH OPTIONS
 .IP "\fB\-a, \-\-add\fP"
-add specified partitions or read disk and add all partitions
+Add the specified partitions, or read the disk and add all partitions.
 .IP "\fB\-b, \-\-bytes\fP"
-Print the SIZE column in bytes rather than in human readable format.
+Print the SIZE column in bytes rather than in human-readable format.
 .IP "\fB\-d, \-\-delete\fP"
-delete specified or all partitions
-.IP "\fB\-l, \-\-list\fP"
-list partitions. Note that the all numbers are in 512-byte sectors. This output
-format is DEPRECATED in favour of \fB\-\-show\fP. Don't use it in newly written
-scripts.
+Delete the specified partitions or all partitions.
 .IP "\fB\-g, \-\-noheadings\fP"
 Do not print a header line.
+.IP "\fB\-l, \-\-list\fP"
+List the partitions.  Note that all numbers are in 512-byte sectors.  This output
+format is DEPRECATED in favour of \fB\-\-show\fP.  Don't use it in newly written
+scripts.
 .IP "\fB\-o, \-\-output \fIlist\fP"
-Define output columns for \fB\-\-show\fP and  \fB\-\-raw\fP output. If output format is
-not specified then \fB\-\-show\fP is enable by default. Use \fB\-\-help\fP to 
-get list of all supported columns.
+Define the output columns to use for \fB\-\-show\fP and  \fB\-\-raw\fP output.
+If no output arrangement is specified, then a default set is used.
+Use \fB\-\-help\fP to  get list of all supported columns.
 .IP "\fB\-r, \-\-raw\fP"
-Use raw output format.
+Use the raw output format.
 .IP "\fB\-s, \-\-show\fP"
-list partitions. All numbers (except SIZE) are in 512-byte sectors. The output
-columns could be (re)defined by \fB\-\-output\fP option.
+List the partitions.  All numbers (except SIZE) are in 512-byte sectors.  The output
+columns can be rearranged with the \fB\-\-output\fP option.
 .IP "\fB\-t, \-\-type \fItype\fP"
-Specify the partition table type -- dos, bsd, solaris, unixware or gpt.
+Specify the partition table type -- aix, bsd, dos, gpt, mac, minix, sgi, solaris_x86,
+sun, ultrix or unixware.
 .IP "\fB\-n, \-\-nr \fIM:N\fP"
-Specify the range of partitions. For backward compatibility is also supported
-range definition in <M-N> format. The range could be specified by negative 
-numbers, for example "--nr :-1" means last partition, and "--nr -2:-1" means 
-last two partition. Supported range specifications:
+Specify the range of partitions.  For backward compatibility also the format
+<M-N> is supported.  The range may contain negative
+numbers, for example "--nr :-1" means the last partition, and "--nr -2:-1" means
+the last two partitions.  Supported range specifications are:
 .RS
 .TP
 .B <M>
-Specify only one partition (e.g. --nr 3).
+Specifies just one partition (e.g. --nr 3).
 .TP
 .B <M:>
-Specify lower limit only (e.g. --nr 2:).
+Specifies lower limit only (e.g. --nr 2:).
 .TP
 .B <:N>
-Specify upper limit only (e.g. --nr :4).
+Specifies upper limit only (e.g. --nr :4).
 .TP
 .B <M:N>
 or
 .B <M-N>
-Specify lower and upper limits (e.g. --nr 2:4).
+Specifies lower and upper limits (e.g. --nr 2:4).
 .RE
 .SH EXAMPLES
 .IP "\fBpartx \-\-show /dev/sdb3\fP"
 .IP "\fBpartx \-\-show --nr 3 /dev/sdb\fP"
 .IP "\fBpartx \-\-show /dev/sdb3 /dev/sdb\fP"
-List partition 3 of /dev/sdb.
+All three commands list partition 3 of /dev/sdb.
 .IP "\fBpartx \-\-show \- /dev/sdb3\fP"
-List all subpartitions on /dev/sdb3 (the device is used as whole-disk).
+Lists all subpartitions on /dev/sdb3 (the device is used as whole-disk).
 .IP "\fBpartx \-o START -g --nr 3 /dev/sdb\fP"
-Print the start sector of partition 5 on /dev/sda without header.
+Prints the start sector of partition 5 on /dev/sda without header.
 .IP "\fBpartx \-o SECTORS,SIZE /dev/sda5 /dev/sda\fP"
-List the length in sectors and human readable size of partition 5 on /dev/sda.
+Lists the length in sectors and human-readable size of partition 5 on /dev/sda.
 .IP "\fBpartx \-\-add --nr 3:5 /dev/sdd\fP"
-Add all available partitions from 3 to 5 (inclusive) on /dev/sdd.
+Adds all available partitions from 3 to 5 (inclusive) on /dev/sdd.
 .IP "\fBpartx \-d --nr :-1 /dev/sdd\fP"
-Removes last partition on /dev/sdd.
+Removes the last partition on /dev/sdd.
 
 .SH SEE ALSO
 .BR addpart (8),
