--- a/sys-utils/lscpu.1
+++ b/sys-utils/lscpu.1
@@ -1,36 +1,43 @@
 .\" Process this file with
 .\" groff -man -Tascii lscpu.1
 .\"
-.TH LSCPU 1 "JULY 2008" Linux "User Manuals"
+.TH LSCPU 1 "February 2011" Linux "User Manuals"
 .SH NAME
 lscpu \- CPU architecture information helper
 .SH SYNOPSIS
 .B lscpu
-.RB [ \-hp ]
+.RB [ \-hpx ]
+.RB [ \-s
+.IR directory ]
 .SH DESCRIPTION
 .B lscpu
 gathers CPU architecture information like number of CPUs, threads,
 cores, sockets, NUMA nodes, information about CPU caches, CPU family,
 model, bogoMIPS, byte order and stepping from sysfs and /proc/cpuinfo, and prints it in
-human-readable format. It supports both online and offline CPUs. Alternatively, it can print out in parsable
-format including how different caches are shared by different CPUs,
-which can also be fed to other programs.
+a human-readable format.  It supports both online and offline CPUs.
+It can also print out in a parsable format,
+including how different caches are shared by different CPUs,
+which can be fed to other programs.
 .SH OPTIONS
 .TP
 .BR \-h , " \-\-help"
 Print a help message.
 .TP
 .BR \-p , " \-\-parse"
-Print out in parsable instead of printable format.
+Print out in parsable instead of human-readable format.
+.TP
+.BR \-s , " \-\-sysroot " \fIdirectory\fP
+Use the specified \fIdirectory\fP as system root.  This allows you to inspect
+a snapshot from a different system.
 .TP
 .BR \-x , " \-\-hex"
-Use hexadecimal masks for CPU(s) sets (e.g. 0x3). The default is print the sets
-in the list format (e.g. 0,1).
+Use hexadecimal masks for CPU sets (e.g. 0x3).  The default is to print the sets
+in list format (e.g. 0,1).
 .SH BUGS
 The basic overview about CPU family, model, etc. is always based on the first
 CPU only.
 
-Sometimes in Xen Dom0 kernel reports wrong data.
+Sometimes in Xen Dom0 the kernel reports wrong data.
 .SH AUTHOR
 .nf
 Cai Qian <qcai@redhat.com>
