docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -91,6 +91,7 @@ CONTRIBUTORS:
       David Brownell <david-b@pacbell.net>
       Davidlohr Bueso <dave@gnu.org>
       David Miller <davem@davemloft.net>
+      David Prévot <david@tilapin.org>
       David Woodhouse <dwmw2@infradead.org>
       Denis ChengRq <crquan@gmail.com>
       Dennis Gilmore <dennis@ausil.us>
@@ -134,6 +135,7 @@ CONTRIBUTORS:
       Jim Meyering <jim@meyering.net>
       Jim Meyering <meyering@redhat.com>
       Jiro SEKIBA <jir@unicus.jp>
+      Joe Hansen <joedalton2@yahoo.dk>
       John Keeping <john.keeping@lineone.net>
       Jon Grant <jg@jguk.org>
       Jon Ringle <jon@ringle.org>
