--- a/text-utils/more.1
+++ b/text-utils/more.1
@@ -87,6 +87,8 @@ to count logical, rather than screen lines (i.e., long lines are not
 folded).
 .It Fl p
 Do not scroll.  Instead, clear the whole screen and then display the text.
+
+Notice that this option is switched automatically on if executable is named to `page'.
 .It Fl c
 Do not scroll.  Instead, paint each screen from the top, clearing the
 remainder of each line as it is displayed.
