uuidd: fix manpage: libuuid(3) does not exist
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -79,5 +79,5 @@ daemon  was written by Theodore Ts'o <tytso@mit.edu>.
 uuidd is part of the util-linux package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux/.
 .SH "SEE ALSO"
-.BR libuuid (3),
+.BR uuid (3),
 .BR uuidgen (1)
