libuuid: manpage spelling fixes
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/shlibs/uuid/man/uuid_generate.3
+++ b/shlibs/uuid/man/uuid_generate.3
@@ -58,7 +58,7 @@ function forces the use of the all-random UUID format, even if
 a high-quality random number generator (i.e.,
 .IR /dev/urandom )
 is not available, in which case a pseudo-random
-generator will be subsituted.  Note that the use of a pseudo-random
+generator will be substituted.  Note that the use of a pseudo-random
 generator may compromise the uniqueness of UUIDs
 generated in this fashion.
 .sp
@@ -75,7 +75,7 @@ function only uses this algorithm if a high-quality source of
 randomness is not available.
 .sp
 The UUID is 16 bytes (128 bits) long, which gives approximately 3.4x10^38
-unique values (there are approximately 10^80 elemntary particles in
+unique values (there are approximately 10^80 elementary particles in
 the universe according to Carl Sagan's
 .IR Cosmos ).
 The new UUID can reasonably be considered unique among all UUIDs created
