hwclock: make RTC default to UTC time
If /etc/adjtime doesn't specify UTC or LOCAL, rtcwake defaults to UTC
and hwclock defaults to LOCAL.

Switch hwclock to meet the behaviour of rtcwake (default=UTC), also
matching the kernel's CONFIG_RTC_HCTOSYS behaviour.

The user impact of this change should be minimal, as anyone who has run
"hwclock --systohc" before will have their UTC/LOCAL choice already
recorded in /etc/adjtime.

Signed-off-by: Daniel Drake <dsd@laptop.org>

--- a/hwclock/hwclock.8
+++ b/hwclock/hwclock.8
@@ -169,7 +169,7 @@ was used to set the clock (i.e. hwclock was successfully run with the
 or
 .B \-\-adjust
 options), as recorded in the adjtime file.  If the adjtime file doesn't
-exist, the default is local time.
+exist, the default is UTC time.
 
 .TP
 .B \-\-noadjfile
