docs: update TODO
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
 
+tailf
+-----
+ - use getopt(), now it does not support "--lines=1", supported is 
+   only "--lines 1" (so without '=').
+
 kill
 ----
  - support real-time signals in format
