tailf: tailf mention new help & version options in man page
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/text-utils/tailf.1
+++ b/text-utils/tailf.1
@@ -48,6 +48,13 @@ Mandatory arguments to long options are mandatory for short options too.
 output the last
 .I N
 lines, instead of the last 10.
+.TP
+\fB\-V\fR, \fB\-\-version
+Output version information and exit.
+.TP
+\fB\-h\fR, \fB\-\-help
+Display help and exit.
+
 .SH AUTHOR
 This program was originally written by Rik Faith (faith@acm.org) and may be freely
 distributed under the terms of the X11/MIT License.  There is ABSOLUTELY
