--- a/misc-utils/uuidd.8
+++ b/misc-utils/uuidd.8
@@ -2,7 +2,7 @@
 .\" Copyright 2007 by Theodore Ts'o.  All Rights Reserved.
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
-.TH UUIDD 8 "May 2009" "Linux"
+.TH UUIDD 8 "February 2011" "Linux"
 .SH NAME
 uuidd \- UUID generation daemon
 .SH SYNOPSIS
@@ -10,6 +10,7 @@ uuidd \- UUID generation daemon
 .RB [ \-d ]
 .RB [ \-p
 .IR pidfile ]
+.RB [ \-q ]
 .RB [ \-s
 .IR socketpath ]
 .RB [ \-T
@@ -19,10 +20,12 @@ uuidd \- UUID generation daemon
 .RB [ \-r | \-t ]
 .RB [ \-n
 .IR number ]
+.RB [ \-q ]
 .RB [ \-s
 .IR socketpath ]
 .br
 .B uuidd \-k
+.RB [ \-q ]
 .SH DESCRIPTION
 The
 .B uuidd
@@ -50,15 +53,18 @@ UUIDs.
 Specify the pathname where the pid file should be written.  By default,
 the pid file is written to /var/run/uuidd/uuidd.pid.
 .TP
+.B \-r
+Test uuidd by trying to connect to a running uuidd daemon and
+request it to return a random-based UUID.
+.TP
+.BI \-q
+Suppress some failure messages.
+.TP
 .BI \-s " socketpath"
 Specify the pathname used for the unix-domain socket used by uuidd.  By
 default, the pathname used is /var/run/uuidd/request.  This is primarily
 for debugging purposes, since the pathname is hard-coded in the libuuid
 library.
-.TP
-.B \-r
-Test uuidd by trying to connect to a running uuidd daemon and
-request it to return a random-based UUID.
 .TP
 .B \-t
 Test uuidd by trying to connect to a running uuidd daemon and
@@ -68,13 +74,10 @@ request it to return a time-based UUID.
 Specify a timeout for uuidd.  If specified, then uuidd will exit after
 .I timeout
 seconds of inactivity.
-.TP
-.BI \-q
-Turn on quiet flag.
 .SH AUTHOR
 The
 .B uuidd
-daemon  was written by Theodore Ts'o <tytso@mit.edu>.
+daemon was written by Theodore Ts'o <tytso@mit.edu>.
 .SH AVAILABILITY
 uuidd is part of the util-linux package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux/.
