textual: tweak several manpages, mainly the blkid one
Signed-off-by: Benno Schulenberg <bensberg@justemail.net>

--- a/misc-utils/findfs.8
+++ b/misc-utils/findfs.8
@@ -4,7 +4,7 @@
 .\"
 .TH FINDFS 8 "February 2009" "Linux" "MAINTENANCE COMMANDS"
 .SH NAME
-findfs \- Find a filesystem by label or UUID
+findfs \- find a filesystem by label or UUID
 .SH SYNOPSIS
 .B findfs
 .BI LABEL= label
@@ -24,7 +24,7 @@ be printed on stdout.
 .SH AUTHOR
 .B findfs
 was originally written by Theodore Ts'o (tytso@mit.edu) and re-written for
-util-linux package by Karel Zak (kzak@redhat.com).
+the util-linux package by Karel Zak (kzak@redhat.com).
 .SH AVAILABILITY
 The findfs command is part of the util-linux package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux/.
