--- a/misc-utils/rename.1
+++ b/misc-utils/rename.1
@@ -3,7 +3,7 @@
 .\"
 .TH RENAME 1 "1 January 2000" "" "Linux Programmer's Manual"
 .SH NAME
-rename \- Rename files
+rename \- rename files
 .SH SYNOPSIS
 .B rename
 .IR  "from to file" ...
@@ -19,9 +19,9 @@ in their name by
 .TP
 .BR \-V , " \-\-version"
 Display version information and exit.
-.TP
 
-For example, given the files
+.SH EXAMPLES
+Given the files
 .IR foo1 ", ..., " foo9 ", " foo10 ", ..., " foo278 ,
 the commands
 
