--- a/misc-utils/blkid.8
+++ b/misc-utils/blkid.8
@@ -5,9 +5,9 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
 .\" Based on uuidgen, Mon Sep 17 10:42:12 2000, Andreas Dilger
-.TH BLKID 8 "February 2009" "Linux" "MAINTENANCE COMMANDS"
+.TH BLKID 8 "February 2011" "Linux" "MAINTENANCE COMMANDS"
 .SH NAME
-blkid \- command\-line utility to locate/print block device attributes
+blkid \- locate/print block device attributes
 .SH SYNOPSIS
 .B blkid
 .RB \-L
@@ -46,8 +46,7 @@ blkid \- command\-line utility to locate/print block device attributes
 .IR list ]
 .RB [ \-u
 .IR list ]
-.I device
-[\fIdevice\fR ...]
+.IR device " ... "
 .in -9
 
 .B blkid
@@ -56,22 +55,21 @@ blkid \- command\-line utility to locate/print block device attributes
 .IR format ]
 .RB [ \-s
 .IR tag ]
-.I device
-[\fIdevice\fR ...]
+.IR device " ... "
 
 .SH DESCRIPTION
 The
 .B blkid
-program is the command-line interface to working with
+program is the command-line interface to working with the
 .BR libblkid (3)
-library.  It can determine the type of content (e.g. filesystem, swap)
-a block device holds, and also attributes (tokens, NAME=value pairs)
+library.  It can determine the type of content (e.g. filesystem or swap)
+that a block device holds, and also attributes (tokens, NAME=value pairs)
 from the content metadata (e.g. LABEL or UUID fields).
 .PP
 .B blkid
 has two main forms of operation: either searching for a device with a
 specific NAME=value pair, or displaying NAME=value pairs for one or
-more devices.
+more specified devices.
 .SH OPTIONS
 The \fIsize\fR and \fIoffset\fR arguments may be followed by binary (2^N) 
 suffixes KiB, MiB, GiB, TiB, PiB and EiB (the "iB" is optional, e.g. "K" has the
@@ -94,12 +92,11 @@ devices which no longer exist.
 Display a usage message and exit.
 .TP
 .B \-i
-Display I/O Limits (aka I/O topology) information. The 'export' output format is
-automatically enabled. This option could be used together with \fB-p\fR option.
+Display I/O Limits (aka I/O topology) information.  The 'export' output format is
+automatically enabled.  This option can be used together with the \fB-p\fR option.
 .TP
 .B \-l
-Look up one device that matches the search parameter specified using
-the
+Look up only one device that matches the search parameter specified with the
 .B \-t
 option.  If there are multiple devices that match the specified search
 parameter, then the device with the highest priority is returned, and/or
@@ -109,33 +106,33 @@ block devices.  If this option is not specified,
 .B blkid
 will print all of the devices that match the search parameter.
 .TP
-.B \-L " label "
-Look up one device that uses the label (same as: -l -o device -t
-LABEL=<label>).  This look up method is able to reliable use /dev/disk/by-label
-udev symlinks (depends on setting in /etc/blkid.conf). Avoid to use the
-symlinks directly. It is not reliable to use the symlinks without verification.
+.BI \-L " label"
+Look up the device that uses this \fIlabel\fR (equal to: -l -o device -t
+LABEL=<label>).  This lookup method is able to reliably use /dev/disk/by-label
+udev symlinks (dependent on a setting in /etc/blkid.conf).  Avoid using the
+symlinks directly; it is not reliable to use the symlinks without verification.
 The \fB-L\fR option works on systems with and without udev.
 
 Unfortunately, the original
 .B blkid(8)
 from e2fsprogs use the \fB-L\fR option as a
-synonym to the \fB-o list\fR option. For better portability use "-l -o device
--t LABEL=<label>" and "-o list" in your scripts rather than -L option.
+synonym for the \fB-o list\fR option.  For better portability, use \fB-l -o device
+-t LABEL=<label>\fR and \fB-o list\fR in your scripts rather than the \fB-L\fR option.
 .TP
-.B \-n " list "
-Restrict probing functions to defined (comma separated) list of superblock types (names).
-The list can be prefixed with "no" to specify the types which should be ignored.
+.BI \-n " list "
+Restrict the probing functions to the specified (comma-separated) \fIlist\fR of
+superblock types (names).
+The list items may be prefixed with "no" to specify the types which should be ignored.
 For example:
 .sp
   blkid -p -n vfat,ext3,ext4 /dev/sda1
 .sp
 probes for vfat, ext3 and ext4 filesystems, and
 .sp
-  blkid -p -u nominix /dev/sda1
+  blkid -p -n nominix /dev/sda1
 .sp
-probes for all supported formats exclude minix filesystem. This option is
-useful with
-\fB-p\fR only.
+probes for all supported formats except minix filesystems.
+This option is only useful together with \fB-p\fR.
 .TP
 .BI \-o " format"
 Display
@@ -152,29 +149,29 @@ print all tags (the default)
 print the value of the tags
 .TP
 .B list
-print the devices in a user-friendly format, this output format is unsupported
+print the devices in a user-friendly format; this output format is unsupported
 for low-level probing (\fB-p\fR or \fB-i\fR)
 .TP
 .B device
-print the device name only, this output format is always enabled for \fB-L\fR
+print the device name only; this output format is always enabled for \fB-L\fR
 and \fB-U\fR options
 .TP
 .B udev
-print key="value" pairs for easy import into the udev environment. The keys are
-prefixed by ID_FS_ or ID_PART_ prefixes.
+print key="value" pairs for easy import into the udev environment; the keys are
+prefixed by ID_FS_ or ID_PART_ prefixes
 
-The udev output returns ID_FS_AMBIVALENT tag if more superblocks are detected,
+The udev output returns the ID_FS_AMBIVALENT tag if more superblocks are detected,
 and ID_PART_ENTRY_* tags are always returned for all partitions including empty
 partitions.
 .TP
 .B export
-print key=value pairs for easy import into the environment.  This output format
-is automatically enabled when I/O Limits (\fB-i\fR option) are requested. 
+print key=value pairs for easy import into the environment; this output format
+is automatically enabled when I/O Limits (\fB-i\fR option) are requested
 .RE
 .TP
 .BI \-O " offset"
-Probe at the given offset (only useful with \fB-p\fR). This option could be
-used together with \fB-i\fR option.
+Probe at the given \fIoffset\fR (only useful with \fB-p\fR).  This option can be
+used together with the \fB-i\fR option.
 .TP
 .BI \-p
 Switch to low-level superblock probing mode (bypass cache).
@@ -212,22 +209,22 @@ and
 If there are no devices specified on the command line, all block devices
 will be searched; otherwise only the specified devices are searched.
 .TP
-.B \-u " list "
-Restrict probing functions to defined (comma separated) list of "usage" types.
-Supported usage types are: filesystem, raid, crypto and other. The list can be
-prefixed with "no" to specify the usage types which should be ignored. For example:
+.BI \-u " list "
+Restrict the probing functions to the specified (comma-separated) \fIlist\fR of "usage" types.
+Supported usage types are: filesystem, raid, crypto and other.  The list items may be
+prefixed with "no" to specify the usage types which should be ignored.  For example:
 .sp
   blkid -p -u filesystem,other /dev/sda1
 .sp
-probes for all filesystems and others (e.g. swap) formats, and
+probes for all filesystem and other (e.g. swap) formats, and
 .sp
   blkid -p -u noraid /dev/sda1
 .sp
-probes for all supported formats exclude RAIDs. This option is useful with
-\fB-p\fR only.
+probes for all supported formats except RAIDs.
+This option is only useful together with \fB-p\fR.
 .TP
-.B \-U " uuid "
-Look up one device that uses the uuid. For more details see the \fB-L\fR option.
+.BI \-U " uuid "
+Look up the device that uses this \fIuuid\fR.  For more details see the \fB-L\fR option.
 .TP
 .B \-v
 Display version number and exit.
@@ -237,9 +234,9 @@ Write the device cache to
 .I writecachefile
 instead of writing it to the default cache file
 .IR /etc/blkid.tab .
-If you don't want to save the cache to the default file, specify
+If you don't want to save the cache at all, specify
 .IR /dev/null.
-If not specified it will be the same file as that given by the
+If not specified, it will be the same file as that given with the
 .B \-c
 option.
 .TP
@@ -256,11 +253,11 @@ If the specified token was found, or if any tags were shown from (specified)
 devices, 0 is returned.
 
 If the specified token was not found, or no (specified) devices could be
-identified an exit code of 2 is returned.
+identified, an exit code of 2 is returned.
 
 For usage or other errors, an exit code of 4 is returned.
 
-If the ambivalent low-level probing result was detected an exit code of 8 is
+If the ambivalent low-level probing result was detected, an exit code of 8 is
 returned.
 .SH AUTHOR
 .B blkid
