--- a/misc-utils/kill.1
+++ b/misc-utils/kill.1
@@ -26,8 +26,8 @@ it may be necessary to use the KILL (9) signal, since this signal cannot
 be caught.
 .PP
 Most modern shells have a builtin kill function, with a usage rather similar
-to that of the command described here. The `-a' and `-p' options,
-and the possibility to specify pids by command name is a local extension.
+to that of the command described here.  The `-a' and `-p' options,
+and the possibility to specify processes by command name are a local extension.
 .PP
 If sig is 0, then no signal is sent, but error checking is still performed.
 .SH OPTIONS
