mount: rename "quiet" to "silent" (MS_SILENT)
The quiet mount option was in collision with vfat and hfs mount
options. The option was also undocumented -- so it's probably safe to
rename the option than add some ugly hacks or exceptions for vfat/hfs
to the mount(8) code.

Reported-by: https://bugzilla.redhat.com/show_bug.cgi?id=622089
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -963,6 +963,12 @@ Do not allow set-user-identifier or set-group-identifier bits to take
 effect. (This seems safe, but is in fact rather unsafe if you have
 suidperl(1) installed.)
 .TP
+.B silent
+Turn on the silent flag.
+.TP
+.B loud
+Turn off the silent flag.
+.TP
 .B owner
 Allow an ordinary (i.e., non-root) user to mount the filesystem if he
 is the owner of the device.
