mount: add phelper=
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/umount.8
+++ b/mount/umount.8
@@ -151,13 +151,17 @@ The syntax of external umount helpers is:
 .IR type.subtype ]
 .br
 
-where the <suffix> is filesystem type or a value from "uhelper=" mtab option.
-The \-t option is used  for filesystems with subtypes support (for example
-/sbin/mount.fuse -t fuse.sshfs).
+where the <suffix> is filesystem type or a value from "uhelper=" or "phelper="
+mtab option.  The \-t option is used  for filesystems with subtypes support
+(for example /sbin/mount.fuse -t fuse.sshfs).
 
 The uhelper (unprivileged umount helper) is possible to used when non-root user
 wants to umount a mountpoint which is not defined in the /etc/fstab file (e.g
-devices mounted by HAL).
+devices mounted by udisk).
+
+The phelper (privileged umount helper) is possible to used when root user wants
+to umount a mountpoint which should not be directly umounted by umount(8) (e.g.
+devices mounted by pam_mount).
 
 .SH FILES
 .I /etc/mtab
