--- a/text-utils/rev.1
+++ b/text-utils/rev.1
@@ -41,6 +41,8 @@
 .Nd reverse lines of a file or files
 .Sh SYNOPSIS
 .Nm rev
+.Op Fl V
+.Op Fl h
 .Op Ar file ...
 .Sh DESCRIPTION
 The
@@ -48,6 +50,11 @@ The
 utility copies the specified files to the standard output, reversing the
 order of characters in every line.
 If no files are specified, the standard input is read.
+.Bl -tag -width Ds
+.It Fl V, Fl Fl version
+Output version information and exit.
+.It Fl h, Fl Fl help
+Output help and exit.
 .Sh AVAILABILITY
 The rev command is part of the util-linux package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux/.
