setterm: add note about long dump file paths to man page
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/setterm.1
+++ b/term-utils/setterm.1
@@ -158,7 +158,8 @@ it.  Only works if no \fB\-dump\fP options are given.
 .BI \-file " dumpfilename"
 Sets the snapshot file name for any \fB\-dump\fP or \fB\-append\fP options
 on the same command line.  If this option is not present, the default is
-screen.dump in the current directory.
+screen.dump in the current directory.  A path name that exceeds system
+maximum will be truncated, see PATH_MAX from linux/limits.h for the value.
 .TP
 .BR \-msg " [" on | off "] (virtual consoles only)"
 Enables or disables the sending of kernel \fBprintk()\fP messages to the
