setterm: mention in man setterm.1 -version and -help switches
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/setterm.1
+++ b/term-utils/setterm.1
@@ -195,6 +195,12 @@ Sets the bell duration in milliseconds.  Without an argument, defaults to 0.
 .TP
 .BR \-bfreq " [\fIfreqnumber\fP]"
 Sets the bell frequency in Hz.  Without an argument, defaults to 0.
+.TP
+.BR \-version
+Output version information and exit.
+.TP
+.BR \-help
+Output help screen and exit.
 .SH "SEE ALSO"
 .BR tput (1),
 .BR stty (1),
