wall: add long options and 79 char cut info to the man page
Mention that over 79 characters long lines are cut, while long
options is an obvious change.

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/wall.1
+++ b/term-utils/wall.1
@@ -48,7 +48,10 @@
 displays the contents of
 .Ar file
 or, by default, its standard input, on the terminals of all
-currently logged in users.
+currently logged in users. The command will cut over 79 character
+long lines to new lines. Short lines are white space padded to
+have 79 characters. The command will always put carriage return
+and new line at the end of each line.
 .Pp
 Only the super-user can write on the
 terminals of users who have chosen
@@ -58,7 +61,13 @@ automatically denies messages.
 Reading from a file is refused when the invoker is not superuser
 and the program is suid or sgid.
 .Sh OPTIONS
- -n Supress banner
+.Bl -tag -width Fl
+.It Fl n, Fl Fl nobanner
+Supress banner
+.It Fl V, Fl Fl version
+Output version and exit.
+.It Fl h, Fl Fl help
+Output help and exit.
 .Sh SEE ALSO
 .Xr mesg 1 ,
 .Xr talk 1 ,
