docs: scriptreplay mention basic long options
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/scriptreplay.1
+++ b/term-utils/scriptreplay.1
@@ -180,6 +180,13 @@ example, a speed-up of 2 makes
 .B scriptreplay
 go twice as fast and a speed-up of 0.1 makes it go ten times slower
 than the original session.
+.SH OPTIONS
+.TP
+.BR \-V , " \-\-version"
+Print version information.
+.TP
+.BR \-h , " \-\-help"
+Print a help message.
 .SH "EXAMPLE"
 .IX Header "EXAMPLE"
 .Vb 7
