docs: scriptreplay add note about new options
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/term-utils/scriptreplay.1
+++ b/term-utils/scriptreplay.1
@@ -181,6 +181,17 @@ example, a speed-up of 2 makes
 go twice as fast and a speed-up of 0.1 makes it go ten times slower
 than the original session.
 .SH OPTIONS
+The options will overide old style arguments.
+.TP
+.BR \-t , " \-\-timing FILE"
+File containing script timing output.
+.TP
+.BR \-s , " \-\-typescript FILE"
+Script terminal output file.
+.TP
+.BR \-d , " \-\-divisor NUM"
+Speed up or slow down replay displaying by divisor. The argument
+is floating point number.
 .TP
 .BR \-V , " \-\-version"
 Print version information.
